Fixing jumpbar flip card on firefox

--- a/UI/Web/src/app/cards/card-detail-layout/card-detail-layout.component.scss
+++ b/UI/Web/src/app/cards/card-detail-layout/card-detail-layout.component.scss
@@ -165,6 +165,7 @@ h2 {
   justify-content: center;
   font-size: 18px;
   border-radius: 4px;
+  transform-style: preserve-3d;
 }
 
 .flip-button-back {
